Fix: Home page spark video on small screens

--- a/src/pages/Home/Economy/economy.sass
+++ b/src/pages/Home/Economy/economy.sass
@@ -197,6 +197,7 @@
 
 +render-to($media-xxs)
   .HomeEconomy
+    overflow: visible
     &__aside4
       grid-column: 1/span 5
       grid-row: 2
@@ -210,6 +211,9 @@
       grid-row: 4
       position: relative
       z-index: 1
+      margin-bottom: -60px
+      padding-bottom: 60px
+      +shadow-deep()
     &__video1
       display: block
       grid-column: 6/span 1
@@ -225,7 +229,7 @@
       grid-column: 6/span 1
       grid-row: 4
       height: 100%
-      transform: translate(0, -60px)
+      transform: translate(0, 0)
       z-index: 0
       &::after
         content: ''
@@ -261,10 +265,6 @@
       margin-right: $hspace-xxxs
       background-color: $white
       z-index: 1
-      .TextPanel
-        +shadow-deep()
     &__video3
       width: $hspace-xxxs
-      justify-self: end
-      transform: translate(0, -60px)
       position: relative
